Fix POM file: Use Java 21 LTS, fix name tag, add ByteBuddy deps and JVM args for Mockito